# venezuela-earthquake-ml

./: .gitignore  INTEL_SCOUTING.md  README.md  SETUP.md  build_site.py  data.json  pyproject.toml
.github/workflows/: deploy.yml
templates/: aid.html  base.html  contributing.html  gaps.html  handbook.html  help.html  index.html  intel.html  sources.html  statistics.html  tracks.html  zone.html  zone_caracas.html  zone_la_guaira.html
templates_es/: aid.html  base.html  contributing.html  gaps.html  handbook.html  help.html  index.html  intel.html  sources.html  statistics.html  zone.html
tracks/01-satellite-damage/: README.md
tracks/02-humanitarian-mapping/: README.md
tracks/03-logistics/: README.md
tracks/04-sar-detection/: README.md
tracks/05-aftershock-forecast/: README.md
tracks/06-missing-persons/: README.md
wip/: zone_caracas.html  zone_la_guaira.html
