[project]
name = "venezuela-earthquake-ml"
version = "0.1.0"
description = "Static site for Venezuela earthquake ML response — intel, gaps, zones, and ML tracking"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
